add tags example
